# point-cloud-filters

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  IterativeClosestPoint.cpp  IterativeClosestPoint.h  README.md  kdtreeFlann.cpp  kdtreeFlann.h  pointCloudFilters.cpp  pointCloudFilters.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt
example/DownSampling/: CMakeLists.txt
example/DownSampling/src/: main.cpp
example/ipc/: A.xyz  B.xyz  CMakeLists.txt
example/ipc/src/: main.cpp
include/: FileHandler.hpp  IterativeClosestPoint.hpp  KdtreeFlann.hpp  PointCloudFilters.hpp
include/pclExtractedStuff/: IterativeClosestPoint.hpp
include/pointCloudFilters/: FileHandler.hpp  IterativeClosestPoint.hpp  KdtreeFlann.hpp  PointCloudFilters.hpp  PointDefinition.hpp
src/: FileHandler.cpp  IterativeClosestPoint.cpp  KdtreeFlann.cpp  PointCloudFilters.cpp  main.cpp
test/: bunny.xyz
